--- a/src/componentes/Item/Item.css
+++ b/src/componentes/Item/Item.css
@@ -1,11 +1,3 @@
-.container {
-    gap: 20px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 100%;
-}
 
 .card {
     border: 1px solid rgba(251, 251, 251);
@@ -29,15 +21,16 @@
     background: whitesmoke;
     box-shadow: 0px 15px 35px lightgray;
     transition: 1s ease;
-    color: #FF773D ;
+    color:darkslategrey ;
 }
 
 .card p {
-    display: block;
+    display: flex;
     padding-top: 5px;
-    padding-left: 10px;
-    font-weight: 600;
-    font-size: 1.1em;
+    padding-left: 1px;
+    font-weight: 400;
+    font-size: 0.9em;
+    align-self: flex-start;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -56,20 +49,20 @@
 
 .card button {
     border-color: rgba(0, 119, 182, 0.9);
-    color: rgba(0, 119, 182, 0.9);
-    background-color: rgb(162, 232, 228);
+    color:azure;
+    background-color:darkcyan;
     margin-bottom: 10px;
 }
 
 .card button:hover {
     border-color: rgba(0,119,182);
-    color: rgba(0,119,182);
+    color: mintcream;
     /* background-color: whitesmoke; */
 }
 
 .card button:active {
     color: mintcream;
-    background-color: rgb(0, 180, 216);
+    background-color:aliceblue;
 }
 
 .card-button {
