--- a/src/componentes/Item/Item.css
+++ b/src/componentes/Item/Item.css
@@ -1,3 +1,12 @@
+.container {
+    gap: 20px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+}
+
 
 .card {
     border: 1px solid rgba(251, 251, 251);
