--- a/src/componentes/ItemDetail/ItemDetail.css
+++ b/src/componentes/ItemDetail/ItemDetail.css
@@ -8,7 +8,7 @@
 }
 
 
-.card {
+.cardDetail {
     border: 1px solid rgba(251, 251, 251);
     box-shadow: 0px 6px 10px lightgray;
     transition: 0.4s ease-out;
