arreglando estilos en counter de cursos y navbar

--- a/src/componentes/Item/Item.css
+++ b/src/componentes/Item/Item.css
@@ -59,7 +59,7 @@
 .card button {
     border-color: rgba(0, 119, 182, 0.9);
     color:azure;
-    background-color:darkcyan;
+    background-color: lightslategrey;
     margin-bottom: 10px;
 }
 
