--- a/src/componentes/Item/Item.css
+++ b/src/componentes/Item/Item.css
@@ -61,6 +61,7 @@
     color:azure;
     background-color: lightslategrey;
     margin-bottom: 10px;
+    border-radius: 8px;
 }
 
 .card button:hover {
