--- a/src/componentes/Cart/Cart.css
+++ b/src/componentes/Cart/Cart.css
@@ -78,8 +78,8 @@
     background-color: #004b66;
   }
   
-  .cart-button-add {
-    margin-right: 10px;
+  .cart-button-continue {
+    margin-right: 2em;
   }
   
   .cart-button-clear {
@@ -93,4 +93,111 @@
   
   .cart-button-clear:active {
     background-color: #ac2925;
+  }
+
+  .cart-button-buy {
+    background-color: #007bff; /* Cambia este color a tu gusto */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: bold;
+    transition: all 0.3s ease;
+  }
+  
+  .cart-button-buy:hover {
+    background-color: #0062cc; /* Cambia este color a tu gusto */
+  }
+
+  .cart-button-buy:active {
+    background-color: #0062cc; /* Cambia este color a tu gusto */
+  }
+
+  .modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    width: 80%;
+    max-width: 500px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  }
+  
+  .modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  
+  .modal-title {
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+  
+  .modal-close {
+    font-size: 1.2rem;
+    color: grey;
+    cursor: pointer;
+  }
+  
+  .modal-body {
+    margin-bottom: 20px;
+  }
+  
+  .modal-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  
+  .modal-item-name {
+    font-weight: bold;
+  }
+  
+  .modal-item-price {
+    margin-left: 10px;
+  }
+  
+  .modal-total {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  
+  .modal-total-label {
+    font-weight: bold;
+  }
+  
+  .modal-total-amount {
+    font-weight: bold;
+  }
+  
+  .modal-buttons {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .modal-button {
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .modal-button-continue {
+    background-color: white;
+    color: blue;
+    border: 1px solid blue;
+  }
+  
+  .modal-button-checkout {
+    background-color: blue;
+    color: white;
   }
