Cambios en Cart rendering y css de Cart

--- a/src/componentes/Cart/Cart.css
+++ b/src/componentes/Cart/Cart.css
@@ -96,7 +96,7 @@
   }
 
   .cart-button-buy {
-    background-color: #007bff; /* Cambia este color a tu gusto */
+    background-color: #238f0e; /* Cambia este color a tu gusto */
     color: white;
     border: none;
     border-radius: 5px;
@@ -108,11 +108,11 @@
   }
   
   .cart-button-buy:hover {
-    background-color: #0062cc; /* Cambia este color a tu gusto */
+    background-color: #145308; /* Cambia este color a tu gusto */
   }
 
   .cart-button-buy:active {
-    background-color: #0062cc; /* Cambia este color a tu gusto */
+    background-color: #1d9405; /* Cambia este color a tu gusto */
   }
 
   .modal {
