--- a/src/componentes/Cart/Cart.css
+++ b/src/componentes/Cart/Cart.css
@@ -19,6 +19,12 @@
     font-weight: bold;
     color: #006699;
   }
+
+  .cart-total-courses {
+    font-size: 20px;
+    font-weight: bold;
+    color: #084e72;
+  }
   
   .cart-item {
     display: flex;
@@ -35,10 +41,12 @@
   .cart-item-name {
     font-size: 18px;
     font-weight: bold;
+    color: #4d4d4d;
   }
   
   .cart-item-price {
     font-size: 16px;
+    color: #145308;
   }
   
   .cart-item-remove {
