--- a/src/componentes/Item/Item.css
+++ b/src/componentes/Item/Item.css
@@ -17,6 +17,7 @@
     border-radius: 8px;
     width: 230px;
     margin: 10px;
+    color: darkslategray
 }
 
 .card img {
@@ -30,7 +31,7 @@
     background: whitesmoke;
     box-shadow: 0px 15px 35px lightgray;
     transition: 1s ease;
-    color:darkslategrey ;
+    color:rgb(25, 48, 48) ;
 }
 
 .card p {
@@ -66,10 +67,9 @@
     border-radius: 8px;
 }
 
-.card button:hover {
+.card button:enabled:hover {
     border-color: rgba(0,119,182);
     color: mintcream;
-    /* background-color: whitesmoke; */
 }
 
 .card button:active {
