--- a/src/componentes/CartWidget/CartWidget.css
+++ b/src/componentes/CartWidget/CartWidget.css
@@ -1,3 +1,14 @@
+.cart-holder {
+    
+    position: relative;
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    margin-right: 10px;
+    
+  }
+  
+
 
 .cart-icon {
     position: relative;
@@ -7,18 +18,19 @@
     margin-right: 10px;
   }
   
-  
-  .cart-count {
 
-    display: inline-block;
-    justify-content: left;
-    align-items: left;
-    width: 20px;
-    height: 20px;
-    background-color: rgba(255, 0, 0, 0.8);
+  .cart-count {
+    position: absolute;
+    top: 10px;
+    right: -15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 18px;
+    height: 18px;
+    background-color: #ff6666;
     border-radius: 50%;
     color: #fff;
     font-size: 12px;
     font-weight: bold;
   }
-  
