--- a/src/componentes/Cart/Cart.css
+++ b/src/componentes/Cart/Cart.css
@@ -22,18 +22,7 @@
   margin-bottom: 2em;
 }
 
-.cart-total {
-  font-size: 24px;
-  font-weight: bold;
-  color: #006699;
-}
 
-.cart-total-price {
-  font-size: 24px;
-  font-weight: bold;
-  color: #006699;
-  margin-left: 1em;
-}
 
 .cart-total-courses {
   display: flex;
@@ -43,7 +32,43 @@
   font-weight: bold;
   color: #084e72;
   margin-top: 2em;
+  margin-right: 0.7em;
+  padding: 0.5em;
+
 }
+
+
+.cart-total {
+  font-size: 24px;
+  font-weight: bold;
+  color: #006699;
+  
+  
+  transition: all 0.3s ease;
+}
+
+.cart-total:hover{
+
+  transform: scale(1.03);
+  border-color: #005b96;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
+}
+
+.cart-total-price {
+  font-size: 24px;
+  font-weight: bold;
+  color: #006699;
+  margin-left: 1em;
+  transition: all 0.3s ease;
+}
+
+.cart-total-price:hover{
+
+  transform: scale(1.03);
+  border-color: #005b96;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
+}
+
 
 .cart-item {
   display: flex;
@@ -224,10 +249,12 @@ body>div.ReactModalPortal>div>div {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-size: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
-  margin-left: 1em;
-  margin-right: 1em;
+  margin-left: 26.3em;
+  margin-right: 1.8em;
+  color: forestgreen;
 }
 
 .modal-total-label {
@@ -251,17 +278,12 @@ body>div.ReactModalPortal>div>div {
   bottom: 1em;
   left: 350px;
   background-color: white;
-  color: blue;
-  border: 1px solid blue;
+  color: rgb(46, 46, 235);
+  border: 1px solid rgb(49, 49, 219);
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
-}
-
-.modal-button-continue {
-  background-color: white;
-  color: blue;
-  border: 1px solid blue;
+  font-weight: bold;
 }
 
 .modal-button-checkout {
